Primeiro Api ja funcionando com banco e listando

--- a/pom.xml
+++ b/pom.xml
@@ -67,18 +67,26 @@
       <scope>test</scope>
     </dependency>
 
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <scope>test</scope>
-    </dependency>
+	<dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<scope>test</scope>
+	</dependency>
 
-    <dependency>
-      <groupId>com.hackerrank.applications</groupId>
-      <artifactId>junit-ordered-test-runner</artifactId>
-      <version>1.0.1</version>
-      <scope>test</scope>
-    </dependency>
+	<dependency>
+		<groupId>com.hackerrank.applications</groupId>
+		<artifactId>junit-ordered-test-runner</artifactId>
+		<version>1.0.1</version>
+		<scope>test</scope>
+	</dependency>
+
+	<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+	<dependency>
+		<groupId>org.postgresql</groupId>
+		<artifactId>postgresql</artifactId>
+		<version>9.4.1212</version>
+	</dependency>
+    
   </dependencies>
 
   <build>
